fix: release OPTIONS requests in spring security to resolve CORS